[package]
name = "mirl_extensions_core"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true

[features]
default = ["std"]
#### Core
std = ["indexmap?/std", "num-bigfloat?/std", "num-bigint?/std", "num-traits?/std"]
all = ["indexmap", "dashmap", "masstree", "bigint", "bigfloat"]
# Compatibility with ffi
c_compatible = []
#### Supported crates
# Support for hashmap libs
indexmap = ["dep:indexmap", "std"]
dashmap = ["dep:dashmap", "std"]
masstree = ["dep:masstree", "std"]
# # Async# tokio = ["dep:tokio"]# glfw = ["dep:glfw", "dep:gl", "std"]
bigint = ["dep:num-bigint", "dep:num-traits"]
bigfloat = ["dep:num-bigfloat"]
_checking = ["all"]
[dependencies]
### Like a HashMap but concurrent
dashmap = { version = "6.1", optional = true, default-features = false }
# Crate support
### Like a HashMap but it remembers in what order elements were inserted
indexmap = { version = "2.14", optional = true, default-features = false, features = [
    "std",
] }
# ### Like dashmap but faster reading and slower writing
# evmap = { version = ">=11.0.0", optional = true, default-features = false }
### A concurrent indexmap
masstree = { version = "0.9", optional = true, default-features = false }
# mirl_core = { version = "0.0.0-alpha" }
mirl_std_exposed = { version = "0.0.0-alpha" }
num-bigfloat = { version = "1.7", optional = true }
# ### Concurrency# tokio = { version = "1.52", optional = true, features = ["sync"] }
### Number crates
num-bigint = { version = "0.5", optional = true }
num-traits = { version = "0.2.19", optional = true }

# TODO:
# Add support for the following:
# - num_bigint
# - num_bigfloat
[build-dependencies]
mirl_build_tools = { workspace = true }

[lints]
workspace = true
